heartbeat/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartbeat
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: heartbeat
  template:
    metadata:
      labels:
        app: heartbeat
    spec:
      containers:
        - name: heartbeat
          image: ghcr.io/pmh-only/heartbeat:latest
