heartbeat/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heartbeat-service
spec:
  selector:
    app: heartbeat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
