heartbeat/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: heartbeat-route
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - heart.pmh.codes
  rules:
    - backendRefs:
        - name: heartbeat-service
          port: 8080
